Parameter file for multiple environments

--- a/wordpress.yml
+++ b/wordpress.yml
@@ -1,46 +1,40 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: "Wordpress template for prod and NonProd"
-
 Parameters:
+  vpcCidrBase:
+    Type: String
+    # Default: '10.1.'
+  subnetStart:
+    Type: String
+    # Default: '1'
+  env:
+    Type: String
+    # Default: 'dev'
   wpuserdata:
     Type: String
-    Default: |
-      #!/bin/bash
-      sudo yum install -y jq httpd
-      wget https://wordpress.org/latest.tar.gz
-      tar -xzf latest.tar.gz
-      cp wordpress/wp-config-sample.php wordpress/wp-config.php
-      wpdb=`aws ssm get-parameter --name wpdb --with-decryption --region=ap-southeast-2 | jq .Parameter.Value`
-      wpdbuser=`aws ssm get-parameter --name wpdbuser --with-decryption --region=ap-southeast-2 | jq .Parameter.Value`
-      wpdbhost=`aws ssm get-parameter --name wpdbhost --with-decryption --region=ap-southeast-2 | jq .Parameter.Value`
-      wpdbpasswd=`aws ssm get-parameter --name wpdbpasswd --with-decryption --region=ap-southeast-2 | jq .Parameter.Value`
-      sed -i "s/define( 'DB_NAME', 'database_name_here' )/define( 'DB_NAME', ${wpdb} )/g" wp-config.php
-      sed -i "s/define( 'DB_USER', 'username_here' )/define( 'DB_USER', ${wpdbuser} )/g" wp-config.php
-      sed -i "s/define( 'DB_PASSWORD', 'password_here' )/define( 'DB_PASSWORD', ${wpdbpasswd} )/g" wp-config.php
-      sed -i "s/define( 'DB_HOST', 'localhost' )/define( 'DB_HOST', ${wpdbhost} )/g" wp-config.php
-      sed -i '/put your unique phrase here/d' wp-config.php
-      curl https://api.wordpress.org/secret-key/1.1/salt/ >> wp-config.php
-      sudo cp -r wordpress/* /var/www/html/
-      sudo chown -R apache /var/www
-      sudo chgrp -R apache /var/www
-      sudo chmod 2775 /var/www
-      find /var/www -type d -exec sudo chmod 2775 {} \;
-      find /var/www -type f -exec sudo chmod 0664 {} \;
-      sudo systemctl restart httpd
-      sudo systemctl enable httpd
 
 Resources:
   wpvpc:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.0.0.0/16
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - !Ref subnetStart
+            - '.0/16'
       EnableDnsSupport: 'true'
       EnableDnsHostnames: 'true'
       Tags:
        - Key: app
          Value: wordpress
        - Key: Name
-         Value: wordpressVPC
+         Value:
+          !Join
+            - ''
+            - - wordpress
+              - !Ref env
+              - 'VPC'
 
   wpprivatesubneta:
     DependsOn: wpvpc
@@ -48,7 +42,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: false
-      CidrBlock: 10.0.4.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '4'
+            - '.0/24'
       AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list
       Tags:
       - Key: Name
@@ -62,7 +61,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: false
-      CidrBlock: 10.0.5.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '5'
+            - '.0/24'
       AvailabilityZone: !Select [ 1, !GetAZs ]    # Get the second AZ in the list
       Tags:
       - Key: Name
@@ -76,7 +80,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: false
-      CidrBlock: 10.0.6.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '6'
+            - '.0/24'
       AvailabilityZone: !Select [ 2, !GetAZs ]    # Get the third AZ in the list
       Tags:
       - Key: Name
@@ -90,7 +99,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: true
-      CidrBlock: 10.0.1.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '1'
+            - '.0/24'
       AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list
       Tags:
       - Key: Name
@@ -104,7 +118,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: true
-      CidrBlock: 10.0.2.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '2'
+            - '.0/24'
       AvailabilityZone: !Select [ 1, !GetAZs ]    # Get the first AZ in the list
       Tags:
       - Key: Name
@@ -118,7 +137,12 @@ Resources:
     Properties:
       VpcId: !Ref wpvpc
       MapPublicIpOnLaunch: true
-      CidrBlock: 10.0.3.0/24
+      CidrBlock:
+        !Join
+          - ''
+          - - !Ref vpcCidrBase
+            - '3'
+            - '.0/24'
       AvailabilityZone: !Select [ 2, !GetAZs ]    # Get the first AZ in the list
       Tags:
       - Key: Name
@@ -410,11 +434,11 @@ Resources:
       VPCSecurityGroups:
         - !Ref wprdssg
       AllocatedStorage: 10
-      DBName: wpdb
+      DBName: '{{resolve:ssm:wpdb:1}}'
       Engine: MySQL
       EngineVersion: "5.7.22"
-      MasterUserPassword: 'test1234567'
-      MasterUsername: 'wpdbuser'
+      MasterUserPassword: '{{resolve:ssm-secure:wpdbpasswd:1}}'
+      MasterUsername: '{{resolve:ssm:wpdbuser:1}}'
       Tags:
         - Key: Name
           Value: wpdb
